# caresses-opensource

./: README.md  caresses-conf_TEMPLATE.json
CAHRIM/: README.md  cahrim.py  end_session_conf.json  end_session_script.py  fallback_cahrim.py
CAHRIM/ActionsLib/: accept_request.py  accompany.py  action.py  action_fallback.py  approach_user.py  chitchat.py  command_manager.py  display_instructions.py  display_user_emotion.py  display_weather_report.py  go_to.py  go_to_nogoal.py  greet.py  greet_bow.py  greet_namaste.py  greet_wave.py  load.py  move_closer_farther.py  operate_ihouse.py  operate_iot.py  play_game_memory.py  play_karaoke.py  play_music_video.py  play_video.py  privacy.py  (+23 more)
CAHRIM/ActionsLib/aux_files/Navigations/: CMakeLists.txt  Readme.md  package.xml
CAHRIM/ActionsLib/aux_files/Navigations/Map/: pepper_map_inlabmap_3.yaml
CAHRIM/ActionsLib/aux_files/Navigations/Rviz/: Pepper_Mapping_Rviz.rviz  Pepper_goToLocation_Rviz.rviz
CAHRIM/ActionsLib/aux_files/Navigations/launch/: Pepper_Nav.launch  mapping.launch
CAHRIM/ActionsLib/aux_files/Navigations/msg/: InputFuzz.msg  Num.msg
CAHRIM/ActionsLib/aux_files/Navigations/nav_conf/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner.yaml
CAHRIM/ActionsLib/aux_files/Navigations/script/: Env_mapping.py  goToLocation.py
CKB - Embargo/: README.md
CSPEM - Embargo/: README.md
caressOS - Embargo/: README.md
uAAL_ECHONET_HomeGateway/: README.md
uAAL_ECHONET_HomeGateway - Embargo/: README.md
uAAL_Skeleton/: README.md
uAAL_Skeleton - Embargo/: README.md
(+247 files in other folders)
