<?xml version="1.0"?>
<package>
  <name>Navigations</name>
  <version>0.0.0</version>
  <description>The Navigations package</description>

  <maintainer email="beerzzzzz@windowslive.com">beerlablinux</maintainer>
  <license>BSD</license>


  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  
</package>
